fix: remove 1 as a prime. because it it is not

--- a/packages/sample-scripts/prime-numbers/package.json
+++ b/packages/sample-scripts/prime-numbers/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prime": "tsx src/prime",
+    "prime": "tsx src/index",
     "test": "pnpm run test:unit",
     "test:unit:coverage": "vitest run --coverage",
     "test:unit": "vitest run"
