--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -6,9 +6,13 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "pnpm run test:unit",
+    "test:unit:coverage": "vitest run --coverage",
+    "test:unit": "vitest run"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "astro": "^5.2.5",
+    "vitest": "^3.0.5"
   }
 }
