--- a/package.json
+++ b/package.json
@@ -4,15 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "pnpm run test:unit",
-    "test:unit:coverage": "vitest run --coverage",
-    "test:unit": "vitest run"
+    "test": "pnpm run --filter 'samlple-site' test:unit && pnpm run --filter 'prime-numbers' test:unit",
+    "test:unit:coverage": "pnpm run --filter 'samlple-site' test:unit:coverage && pnpm run --filter 'prime-numbers' test:unit:coverage"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "astro": "^5.2.5",
-    "vitest": "^3.0.5"
-  }
+  "license": "ISC"
 }
