--- a/packages/scripts/prime-numbers/package.json
+++ b/packages/scripts/prime-numbers/package.json
@@ -16,5 +16,8 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "3.0.5"
   }
 }
