--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "astro": "^5.2.5",
     "vitest": "^3.0.5"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "3.0.5"
   }
 }
