--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -9,6 +9,10 @@ jobs:
   tests:
     name: Unit tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [22]
 
     steps:
       - name: Set current date
@@ -32,21 +36,11 @@ jobs:
       - run: pnpm test:unit:coverage
 
       - run:
-          echo "PATHS=$(find ./packages -type f -path '*/coverage/lcov.info' |  paste -sd ',' -)" >>
+          echo "PATHS=$(find ./packages -type f -path '*/**/coverage/lcov.info' |  paste -sd ',' -)" >>
           $GITHUB_OUTPUT
         id: coverage-reports
 
-      # - uses: sonarsource/sonarqube-scan-action@master
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      #     SONAR_LCOV_REPORTPATHS: ${{ steps.coverage-reports.outputs.PATHS}}
-      #   with:
-      #     args: >
-      #       -Dsonar.projectVersion=${{ env.VERSION_TIMESTAMP }}
-
-      # # fail deployment on red
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 15
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - uses: codacy/codacy-coverage-reporter-action@v1.3.0
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: ${{ steps.coverage-reports.outputs.PATHS}}
