fix: add repoting path to sonar

--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -36,9 +36,11 @@ jobs:
       - run: pnpm test:unit:coverage
 
       - run:
-          echo "PATHS=$(find ./packages -type f -path '*/coverage/lcov.info' |  paste -sd ',' -)" >>
+          echo "PATHS=$(find ./packages -type f -path '*/**/coverage/lcov.info' |  paste -sd ',' -)" >>
           $GITHUB_OUTPUT
         id: coverage-reports
+
+      - run: echo "COVERAGE_REPORTS=${{ steps.coverage-reports.outputs.PATHS }}"
 
       - uses: codacy/codacy-coverage-reporter-action@v1.3.0
         with:
