--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
 sonar.projectKey=Funnel-Web_code-quality-review
 sonar.organization=funnel-web
+sonar.javascript.lcov.reportPaths=${env.SONAR_LCOV_REPORTPATHS}
