--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -52,3 +52,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_LCOV_REPORTPATHS: ${{ steps.coverage-reports.outputs.PATHS}}
+
+      - uses: paambaati/codeclimate-action@v9.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_PROJECT_TOKEN }}
+        with:
+          coverageLocations: ${{ steps.coverage-reports.outputs.PATHS}}
