--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -53,8 +53,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_LCOV_REPORTPATHS: ${{ steps.coverage-reports.outputs.PATHS}}
 
-      - uses: paambaati/codeclimate-action@v9.0.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_PROJECT_TOKEN }}
-        with:
-          coverageLocations: ${{ steps.coverage-reports.outputs.PATHS}}
+      # - uses: paambaati/codeclimate-action@v9.0.0
+      #   env:
+      #     CC_TEST_REPORTER_ID: ${{ secrets.CODE_CLIMATE_PROJECT_TOKEN }}
+      #   with:
+      #     coverageLocations: ${{ steps.coverage-reports.outputs.PATHS}}
